--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
 </head>
 <body class="h-screen w-screen font-sans">
     <!--Página de login-->
-    <div class="bg-gradient-to-br from-gray-800 to-purple-900 flex flex-row h-full w-full p-10">
+    <div class="bg-gradient-to-br from-gray-800 to-purple-900 sm:flex sm:flex-row h-screen w-full p-10">
         <!--Animação do png-->
         <h1 class="text-3xl absolute top-8 left-8 font-extrabold italic uppercase text-white drop-shadow-xl">Seja bem vindo!</h1>
-        <div class="basis-1/2 flex flex-col items-center justify-center gap-y-8">
+        <div class="basis-1/2 flex flex-col items-center justify-center gap-y-8 xl:flex lg:flex md:flex sm:flex phone:hidden sm:gap-y-8 phone:gap-0">
             <img
             src="../public/img/notebook.png" 
             alt="Imagem de um computador efetuando login"
@@ -19,11 +19,11 @@
             >
         </div>
         <!--Formulário de login-->
-        <div class="p-12 basis-1/2 flex flex-col items-center justify-evenly">
-            <img src="../public/img/do-utilizador.png" class="w-24 h-24 -mb-12 z-10 rounded-full p-2 bg-gray-900">
-            <form action="#" class="bg-gray-800/50 flex flex-col p-6 h-5/6 w-3/5 gap-y-6 items-center justify-evenly rounded-xl backdrop-blur backdrop-opacity-40 shadow-md shadow-gray-800">
+        <div class="p-12 basis-1/2 flex flex-col items-center justify-evenly md:p-0 sm:p-0 xl:basis-1/2 lg:basis-1/2 md:basis-1/2 sm:basis-1/2 phone:basis-full">
+            <img src="../public/img/do-utilizador.png" class="w-24 h-24 -mb-12 z-10 rounded-full p-2 bg-gray-900 xl:flex">
+            <form action="#" class="bg-gray-800/50 flex flex-col p-6 xl:h-5/6 xl:w-3/5 lg:h-full lg:w-3/5 md:h-full md:w-5/6 sm:h-full sm:w-full phone:h-full phone:w-full gap-y-6 items-center justify-evenly rounded-xl backdrop-blur backdrop-opacity-40 shadow-md shadow-gray-800">
                 <div class="flex flex-col w-full">
-                    <label for="username" name="username" id="username" class="text-white mt-8">Nome de usuário <span class="text-red-500">*</span></label>
+                    <label for="username" name="username" id="username" class="text-white mt-8 z-50">Nome de usuário <span class="text-red-500">*</span></label>
                     <input type="text" placeholder="Digite seu nome de usuário" class="duration-200 h-8 rounded-lg p-2 hover:shadow-purple-400 hover:shadow-md focus:shadow-purple-400 focus:shadow-md" spellcheck="false" required>
                 </div>
                 <div class="flex flex-col w-full">
@@ -33,8 +33,8 @@
                 <div class="flex flex-col w-full">
                     <label for="password" name="password" class="text-white">Senha <span class="text-red-500">*</span></label>
                     <input type="password" placeholder="Digite sua senha" id="password" class="duration-200 h-8 rounded-lg p-2 hover:shadow-purple-400 hover:shadow-md focus:shadow-purple-400 focus:shadow-md" required>
-                    <img src="../public/img/hide.png" id="hide" class="h-6 w-6 ml-auto mr-1 -mt-7 cursor-pointer">
-                    <img src="../public/img/view.png" id="view" class="h-6 w-6 ml-auto mr-1 -mt-7 cursor-pointer hidden">
+                    <img src="../public/img/hide.png" id="hide" class="h-6 w-6 ml-auto mr-1 -mt-7 cursor-pointer bg:white">
+                    <img src="../public/img/view.png" id="view" class="h-6 w-6 ml-auto mr-1 -mt-7 cursor-pointer bg: white hidden">
                 </div>
                 <input type="submit" value="login" class="duration-200 bg-purple-500 w-full h-9 mt-6 rounded-lg font-bold pt-2 pb-8 uppercase hover:bg-purple-700 hover:shadow-md hover:shadow-purple-950 cursor-pointer">
             </form>
