removendo duplicidade de id

--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
             <img src="../public/img/do-utilizador.png" class="w-24 h-24 -mb-12 z-10 rounded-full p-2 bg-gray-900 xl:flex">
             <form action="#" class="bg-gray-800/50 flex flex-col p-6 xl:h-5/6 xl:w-3/5 lg:h-full lg:w-3/5 md:h-full md:w-5/6 sm:h-full sm:w-full phone:h-full phone:w-full gap-y-6 items-center justify-evenly rounded-xl backdrop-blur backdrop-opacity-40 shadow-md shadow-gray-800">
                 <div class="flex flex-col w-full">
-                    <label for="username" name="username" id="username" class="text-white mt-8 z-50">Nome de usuário <span class="text-red-500">*</span></label>
+                    <label for="username" name="username" class="text-white mt-8 z-50">Nome de usuário <span class="text-red-500">*</span></label>
                     <input type="text" placeholder="Digite seu nome de usuário" class="duration-200 h-8 rounded-lg p-2 hover:shadow-purple-400 hover:shadow-md focus:shadow-purple-400 focus:shadow-md" spellcheck="false" required>
                 </div>
                 <div class="flex flex-col w-full">
-                    <label for="email" name="email" id="email" class="text-white">E-mail <span class="text-red-500">*</span></label>
+                    <label for="email" name="email" class="text-white">E-mail <span class="text-red-500">*</span></label>
                     <input type="email" placeholder="Digite seu e-mail" class="duration-200 hover:shadow-purple-400 hover:shadow-md focus:shadow-purple-400 focus:shadow-md h-8 rounded-lg p-2" required>
                 </div>
                 <div class="flex flex-col w-full">
